# typirst

./: Cargo.toml  README.md
assets/: text.txt  words.txt
src/: lib.rs  main-old.rs  main.rs  options.rs  splitter.rs  statistics.rs  text_generator.rs  timer.rs  tui.rs  ui.rs  utils.rs
src/ui/: common.rs  graph.rs  mod.rs  typing.rs
