[package]
name = "typirst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.27.0"
dirs = "5.0.1"
rand = "0.8.5"
ratatui = "0.26.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
log = "0.4"
simplelog = "0.12"
